--- a/src/pages/styles/tailwind.css
+++ b/src/pages/styles/tailwind.css
@@ -10,6 +10,29 @@
 #tsparticles {
     position: absolute;
     z-index: 0;
-    height: 50%;
     width: 100%;
+}
+
+@media screen and (max-width: 1022px) {
+    #tsparticles {
+        height: 60%;
+    }
+}
+
+@media screen and (min-width: 1023px) and (max-width: 1365px) {
+    #tsparticles {
+        height: 55%;
+    }
+}
+
+@media screen and (min-width: 1366px) and (max-width: 2559px) {
+    #tsparticles {
+        height: 50%;
+    }
+}
+
+@media screen and (min-width: 2560px) {
+    #tsparticles {
+        height: 45%;
+    }
 }
